Небольшой фикс в документации
