# docs/swagger.json
@@ -4,13 +4,14 @@
         "description": "REST API для управления подписками",
         "title": "Subscriptions API",
         "contact": {},
-        "version": "1.0"
+        "version": "1.1"
     },
     "host": "195.133.20.34:8081",
     "basePath": "/",
     "paths": {
         "/subscriptions": {
             "get": {
+                "description": "Возвращает все подписки из базы данных",
                 "produces": [
                     "application/json"
                 ],
@@ -37,6 +38,7 @@
                 }
             },
             "post": {
+                "description": "Создаёт новую подписку для пользователя",
                 "consumes": [
                     "application/json"
                 ],
@@ -298,34 +300,32 @@
         }
     },
     "definitions": {
-        "model.MonthYear": {
-            "type": "object",
-            "properties": {
-                "time.Time": {
-                    "type": "string"
-                }
-            }
-        },
         "model.Subscription": {
             "type": "object",
             "properties": {
                 "end_date": {
-                    "$ref": "#/definitions/model.MonthYear"
+                    "type": "string",
+                    "example": "12-2025"
                 },
                 "id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "f4e2c8ad-d773-4d39-85b1-a63d2b2cb41f"
                 },
                 "price": {
-                    "type": "integer"
+                    "type": "integer",
+                    "example": 199
                 },
                 "service_name": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "Spotify"
                 },
                 "start_date": {
-                    "$ref": "#/definitions/model.MonthYear"
+                    "type": "string",
+                    "example": "07-2025"
                 },
                 "user_id": {
-                    "type": "string"
+                    "type": "string",
+                    "example": "00000000-0000-0000-0000-000000000001"
                 }
             }
         }
